fixed index column spacing

--- a/forum/static/style.css
+++ b/forum/static/style.css
@@ -56,6 +56,7 @@ html {
   
   .content {
     padding: 0 1rem 1rem;
+    background: rgb(232, 118, 4);
   }
   
   .content > header {
@@ -124,9 +125,14 @@ html {
     resize: vertical;
   }
 
+  .boxcontent {
+    display: flex;
+  }
+
   .column {
     float: left;
-    width: 33%;
+    width: 33.33%;
+    background: rgb(196, 237, 243)
   }
   
   input.danger {
